frontend, juz jakos dziala
